--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
     "recordrtc": "^5.6.2",
+    "swiper": "^10.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
