--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "react-icons": "^4.9.0",
     "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "recordrtc": "^5.6.2",
-    "swiper": "^10.0.3",
+    "swiper": "^10.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
